# Graphic-Computing

./: README.md  base.cpp  common.h
 cameras/: Matrizes.cpp  main.cpp
14-texture/: main.cpp
14-texture/shaders/: triangle_frag.glsl
16 - cameras/: CMakeLists.txt
16 - cameras/shaders/: triangle_frag.glsl
17-geometric/: CMakeLists.txt  main.cpp
17-geometric/shaders/: triangle_vert.glsl
Defindo atributos do vertice/: CMakeLists.txt  Vectors.cpp  main.cpp
Defindo atributos do vertice/shaders/: triangle_vert.glsl
cube3D/: main.cpp
cube3D/headers/: camera.hpp  figure.hpp  motionFuncs.hpp  shaders.hpp
cube3D/shaders/: triangle_frag.glsl  triangle_vert.glsl
cube3D/src/: camera.cpp  figure.cpp
figure_create/: main.cpp
geometric/shaders/: triangle_frag.glsl
geometric_transformation/: main.cpp
mat_view/: main.cpp
openGl_versions/: main.cpp
project1/: main  main.cpp
shaders_prog/: CMakeLists.txt  main.cpp
shaders_prog/shaders/: triangle_vert.glsl
sorting_vector/: CMakeLists.txt  main.cpp
sorting_vector/headers/: camera.hpp  figure.hpp  motionFuncs.hpp
sorting_vector/src/: figure.cpp  shaders.cpp
texture/: CMakeLists.txt  main  main.cpp
texture/shaders/: triangle_frag.glsl  triangle_vert.glsl
transforms_atv/: CMakeLists.txt  main.cpp
transforms_atv/headers/: figure.hpp
transforms_atv/src/: figure.cpp
